errores.txt
play.cpp: In member function ‘void Splay::insert(char*)’:
Splay.cpp:137:45: error: cannot convert ‘Node*’ to ‘Node**’
  137 |             root->getChildsList()->insertar(leafNode);
      |                                             ^~~~~~~~
      |                                             |
      |                                             Node*
In file included from Node.cpp:3,
                 from Splay.cpp:4:
list.cpp:32:27: note:   initializing argument 1 of ‘void list<T>::insertar(T*) [with T = Node*]’
   32 | void list<T>::insertar(T* pData) {
      |                        ~~~^~~~~
Splay.cpp:140:33: error: cannot convert ‘Node*’ to ‘Node**’
  140 |             childList->insertar(newNode);
      |                                 ^~~~~~~
      |                                 |
      |                                 Node*
list.cpp:32:27: note:   initializing argument 1 of ‘void list<T>::insertar(T*) [with T = Node*]’
   32 | void list<T>::insertar(T* pData) {
      |                        ~~~^~~~~
